Added GetUserGetUsersBulk endpoint
